スタイルシートの追加、著作権表示の追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
-/* Materialize */
-/*@import "materialize/components/color";
-$primary-color: color("teal", "accent-3") !default;
-$secondary-color: color("cyan", "base") !default;
-@import 'materialize';
-@import 'material_icons';*/
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+
+th, td {
+  text-align: center;
+}
