--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div id="app">
-  <navbar></navbar>
+  <!--<navbar></navbar>-->
   <!--<timepicker-component></timepicker-component>-->
   <div class="container">
     <router-view></router-view>
@@ -8,3 +8,7 @@
 
 <!--<script src="https://unpkg.com/element-ui/lib/index.js"></script>-->
 <%= javascript_pack_tag 'todo' %>
+
+<footer class="footer">
+  <p>猫アイコン：<%= link_to 'ろじ', 'https://creator.pixta.jp/@loji' %> / PIXTA(ピクスタ)</p>
+</footer>
