Userモデルの作成

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,3 +12,5 @@
 <footer class="footer">
   <p>猫アイコン：<%= link_to 'ろじ', 'https://creator.pixta.jp/@loji' %> / PIXTA(ピクスタ)</p>
 </footer>
+
+<%= link_to "ユーザ登録", signup_path, class: "btn btn-lg btn-primary" %>
